--- a/features/vcr_cassettes/Map_of_local_charities/Show_all_charities_in_map_on_homepage_map.yml
+++ b/features/vcr_cassettes/Map_of_local_charities/Show_all_charities_in_map_on_homepage_map.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://127.0.0.1:39628/__identify__
+    uri: http://127.0.0.1:43968/__identify__
     body:
       encoding: US-ASCII
       string: ''
@@ -19,16 +19,202 @@ http_interactions:
       message: 'OK '
     headers:
       Server:
-      - WEBrick/1.3.1 (Ruby/2.0.0/2014-11-13)
+      - WEBrick/1.3.1 (Ruby/2.0.0/2015-02-25)
       Date:
-      - Sun, 20 Sep 2015 21:25:37 GMT
+      - Sun, 25 Oct 2015 16:57:57 GMT
       Content-Length:
       - '8'
       Connection:
       - Keep-Alive
     body:
       encoding: UTF-8
-      string: '69384180'
+      string: '41417880'
     http_version: 
-  recorded_at: Sun, 20 Sep 2015 21:25:37 GMT
+  recorded_at: Sun, 25 Oct 2015 16:57:57 GMT
+- request:
+    method: get
+    uri: http://127.0.0.1:37705/__identify__
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: 'OK '
+    headers:
+      Server:
+      - WEBrick/1.3.1 (Ruby/2.0.0/2015-02-25)
+      Date:
+      - Sun, 25 Oct 2015 16:58:17 GMT
+      Content-Length:
+      - '8'
+      Connection:
+      - Keep-Alive
+    body:
+      encoding: UTF-8
+      string: '31530260'
+    http_version: 
+  recorded_at: Sun, 25 Oct 2015 16:58:17 GMT
+- request:
+    method: get
+    uri: http://127.0.0.1:38553/__identify__
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: 'OK '
+    headers:
+      Server:
+      - WEBrick/1.3.1 (Ruby/2.0.0/2015-02-25)
+      Date:
+      - Sun, 25 Oct 2015 17:00:23 GMT
+      Content-Length:
+      - '8'
+      Connection:
+      - Keep-Alive
+    body:
+      encoding: UTF-8
+      string: '40786500'
+    http_version: 
+  recorded_at: Sun, 25 Oct 2015 17:00:23 GMT
+- request:
+    method: get
+    uri: http://127.0.0.1:41841/__identify__
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: 'OK '
+    headers:
+      Server:
+      - WEBrick/1.3.1 (Ruby/2.0.0/2015-02-25)
+      Date:
+      - Sun, 25 Oct 2015 17:00:53 GMT
+      Content-Length:
+      - '8'
+      Connection:
+      - Keep-Alive
+    body:
+      encoding: UTF-8
+      string: '30138160'
+    http_version: 
+  recorded_at: Sun, 25 Oct 2015 17:00:53 GMT
+- request:
+    method: get
+    uri: http://127.0.0.1:36388/__identify__
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: 'OK '
+    headers:
+      Server:
+      - WEBrick/1.3.1 (Ruby/2.0.0/2015-02-25)
+      Date:
+      - Sun, 25 Oct 2015 17:01:22 GMT
+      Content-Length:
+      - '8'
+      Connection:
+      - Keep-Alive
+    body:
+      encoding: UTF-8
+      string: '27460160'
+    http_version: 
+  recorded_at: Sun, 25 Oct 2015 17:01:22 GMT
+- request:
+    method: get
+    uri: http://127.0.0.1:50322/__identify__
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: 'OK '
+    headers:
+      Server:
+      - WEBrick/1.3.1 (Ruby/2.0.0/2015-02-25)
+      Date:
+      - Sun, 25 Oct 2015 17:03:11 GMT
+      Content-Length:
+      - '8'
+      Connection:
+      - Keep-Alive
+    body:
+      encoding: UTF-8
+      string: '35208720'
+    http_version: 
+  recorded_at: Sun, 25 Oct 2015 17:03:11 GMT
+- request:
+    method: get
+    uri: http://127.0.0.1:35929/__identify__
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: 'OK '
+    headers:
+      Server:
+      - WEBrick/1.3.1 (Ruby/2.0.0/2015-02-25)
+      Date:
+      - Sun, 25 Oct 2015 17:03:23 GMT
+      Content-Length:
+      - '8'
+      Connection:
+      - Keep-Alive
+    body:
+      encoding: UTF-8
+      string: '33046380'
+    http_version: 
+  recorded_at: Sun, 25 Oct 2015 17:03:23 GMT
 recorded_with: VCR 2.9.3
